--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -106,7 +106,7 @@
           <a  [routerLink]="['/data-analysis']">
             <mat-card class="event-card">
               <div class="image-with-text">
-                <img mat-card-img src="../../../../../assets/image/courses/data-analysis-logo.jpeg" alt="Foto de curso analisis de datos" class="event-card-img cursoanalisis-filter"/>
+                <img mat-card-img src="../../../../../assets/image/courses/data-analysis-event.png" alt="Foto de curso analisis de datos" class="event-card-img cursoanalisis-filter"/>
                 <p class="text-on-image cursoanalisis-text">{{ 'HOME.DATAANALYSIS.TITLE' | translate }}</p>
               </div>
               <mat-card-content class="mt-2">
