re-added buttons to data-analysis and fixed css
and disabled some buttons

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
@@ -53,6 +53,11 @@ h1 {
 
 .example-card {
   margin-bottom: 15px;
+  display:grid;
+  grid-template-rows: 1fr auto;
+}
+.example-card mat-card-actions {
+  text-align: center;
 }
 
 
