--- a/src/app/modules/events/pages/events/events.component.css
+++ b/src/app/modules/events/pages/events/events.component.css
@@ -78,6 +78,20 @@ body {
 
 .event-card-img {
     width: 100%;
+    object-fit: cover;
+    height: 16em;
+    scale: 1.3;
+    object-position: center center;
+}
+
+.event-card:hover .event-card-img {
+    animation: event-move 40s infinite;
+}
+
+@keyframes event-move {
+    from {object-position: top left;}
+    50% {object-position: bottom right;}
+    to {object-position: top left;}
 }
 
 .ieeextreme-filter {
@@ -88,7 +102,7 @@ body {
     filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
 }
 .ieeextreme-text {
-    top: 60%;
+    top: 30%;
 }
 
 .cursopython-filter {
@@ -101,7 +115,7 @@ body {
 }
 
 .cursopython-text{
-    top: 10%;
+    top: 20%;
 }
 
 .cursoanalisis-filter {
@@ -113,7 +127,7 @@ body {
   }
 
 .cursoanalisis-text{
-    top: 10%;
+    top: 5%;
 }
 
 .bitcup-filter {
@@ -125,7 +139,7 @@ body {
 }
 
 .bitcup-text{
-    top: 70%;
+    top: 35%;
 }
 
 .image-with-text {
@@ -158,4 +172,16 @@ body {
 		/* centrado vertical */
 		align-items: center;
 	}
+}
+
+@media (min-width: 1000px) {
+    .text-on-image {
+        font-size: calc(3vw);
+    }
+    .ieeextreme-text {
+        top: 10%;
+    }
+    .cursoanalisis-text{
+        top: 5%;
+    }
 }
