fix: login resurrection

--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -22,7 +22,7 @@
     <div class="mainFrame">
 
         <div class="row d-flex justify-content-center">
-            <form id="account">
+            <form id="account-form">
                 <div>
                     <mat-form-field class="example-full-width" style="width:50vw">
                         <mat-label for="email">{{ 'LOGIN.EMAIL' | translate }}</mat-label>
