homepage sponsors section now uses i18n...
and added a year at the end, this is only temporal until the current year's sponsors have been confirmed

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -226,7 +226,7 @@
   <!-- Sponsors Actuales -->
   <div class="bottomLine mt-4">
     <div class="row">
-      <h1 class="section-title">Sponsors</h1>
+      <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
 
       <br>
 
