--- a/src/app/modules/team/components/team-card/team-card.component.html
+++ b/src/app/modules/team/components/team-card/team-card.component.html
@@ -1,30 +1,7 @@
 <div class="bottomLine">
     <div class="card-group">
-
-        <mdb-card *ngFor="let person of people">
-
-            <div *ngIf="person.name=='white'; else elseBlock">
-                <div class="white-box">
-                </div>
-            </div>
-            
-            
-            <ng-template #elseBlock>
-                <mdb-card-img [src]="person.photo" alt="Foto de {{person.name}}"></mdb-card-img>
-                <a><div class="mask rgba-white-slight"></div></a>
-            
-                <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                    <h4><strong>{{person.name}}</strong></h4>
-                    <h5>{{ person.cargo | translate }}</h5>
-            
-                    <!-- Linkedin -->
-                    <a class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-linkedin"></i></a>
-                    <!-- Mail -->
-                    <a class="cardIcon" href="mailto:{{person.mail}}"><i class="fas fa-envelope"></i></a>
-                </mdb-card-body>
-            </ng-template>
-        
-        </mdb-card>
-
+        <div *ngFor="let person of people">
+            <app-individual-card [person]="person" ></app-individual-card>
+        </div>
     </div>
 </div>
