refactored module in order to follow best angular practices

--- a/src/app/modules/team/components/team-card/team-card.component.html
+++ b/src/app/modules/team/components/team-card/team-card.component.html
@@ -1,7 +1,5 @@
-<div class="bottomLine">
-    <div class="card-group">
-        <div *ngFor="let person of people">
-            <app-individual-card [person]="person" ></app-individual-card>
-        </div>
-    </div>
+<div class="card-group bottomLine">
+  <div *ngFor="let person of team">
+    <app-individual-card [person]="person"></app-individual-card>
+  </div>
 </div>
