--- a/src/app/modules/team/components/individual-card/individual-card.component.html
+++ b/src/app/modules/team/components/individual-card/individual-card.component.html
@@ -14,7 +14,7 @@
             <h4><strong>{{person.name}}</strong></h4>
             
             <!-- Cargo de la persona -->
-            <h5>{{ person.cargo | translate }}</h5>
+            <h5>{{ person.role | translate }}</h5>
     
             <!-- Linkedin -->
             <a class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-linkedin"></i></a>
