--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -12,17 +12,19 @@
   <body>
     <div class="bottomLine" id="home">
       <div class="container" id="wip">
+        <div class="titleRow">
+          <h1 class="title">{{ "RAS.TITLE" | translate }}</h1>
+          <h3 class="subtitle">{{ "RAS.SUBTITLE" | translate }}</h3>
+        </div>
         <img
           src="../../../../../assets/image/IEEE_RAS_logo_4C_stacked-HiRes.png"
           class="rasLogo"
           alt="Logo ITBA-IEEE"
         />
-        <div class="titleRow">
-          <h1 class="title">{{ "RAS.TITLE" | translate }}</h1>
-          <h3 class="subtitle">{{ "RAS.SUBTITLE" | translate }}</h3>
-        </div>
       </div>
       <div>
+        <p class="wip-subtitle">{{ "RAS.UPCOMING" | translate }}</p>
+        <br />
         <p class="wip-subtitle">{{ "WIP" | translate }}</p>
       </div>
     </div>
