--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -25,7 +25,7 @@
     <div>
         <div class="d-flex flex-row-reverse">
             <button class="goback-button">
-                <a href="https://bit.ly/IntroaProgramacionIEEE" class="button-text">
+                <a href="https://bit.ly/Python1C2022" class="button-text">
                     {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
             </button>
         </div>
