--- a/src/app/modules/team/components/individual-card/individual-card.component.html
+++ b/src/app/modules/team/components/individual-card/individual-card.component.html
@@ -19,9 +19,9 @@
             <h5>{{ person.cargo | translate }}</h5>
 
             <!-- Linkedin -->
-            <a class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-linkedin"></i></a>
+            <a class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-lg fa-linkedin"></i></a>
             <!-- Mail -->
-            <a class="cardIcon" href="mailto:{{person.mail}}"><i class="fas fa-envelope"></i></a>
+            <a class="cardIcon" href="mailto:{{person.mail}}"><i class="fas fa-lg fa-envelope"></i></a>
         </mdb-card-body>
     </ng-template>
 </mdb-card>
