--- a/src/app/modules/team/components/team-card/team-card.component.css
+++ b/src/app/modules/team/components/team-card/team-card.component.css
@@ -1,4 +1,5 @@
-.card-group{
+.card-group {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
 }
