Updated IEEExtreme to 2022

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -18,7 +18,7 @@
         <div class="container" id="facts">
             <div class="row">
               <div class="col-sm">
-                  <h1>11</h1>
+                  <h1>15</h1>
                   <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
               </div>
               <div class="dottedlineright"></div>
@@ -79,16 +79,16 @@
         <div class="row">
           <div class="container">
             <div class="row" style="margin-top: 2vmin;">
-                <div class="col-sm mt-5 mt-md-2">
+                <!-- <div class="col-sm mt-5 mt-md-2">
                     <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
                          style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
+                </div> -->
                 <div class="col-sm mt-5 mt-md-2">
                     <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
                          style="position: relative; top: 50%; transform: translateY(-50%);">
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm mt-5 mt-md-4">
                     <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
                          style="position: relative; top: 50%; transform: translateY(-50%);">
@@ -101,7 +101,7 @@
                     <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                          style="position: relative; top: 50%; transform: translateY(-50%); ">
                 </div>    
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
 
     <!-- Sponsor team -->
     <div class="noLine" id="sponsorship">
-      <h1>Sponsorship 2021</h1>
+      <h1>Sponsorship 2022</h1>
       <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
