--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -47,11 +47,15 @@
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
-                    <a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Introductorio_Clases/Clase_1_Introducción_a_la_Programación_con_Python.ipynb"> {{
-                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    1 <!--- 03/05-->
-                    </a>
+                    <ng-template [ngIf]="class1Open" [ngIfElse]="class1Closed">
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb">{{
+                        'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        1
+                        </a>
+                    </ng-template>
+                    <ng-template #class1Closed>
+                        {{'PYTHONCOURSES.CLASSES.TITLE' | translate }} 1
+                    </ng-template>
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE1' | translate }}</mat-card-subtitle> -->
             </mat-card-header>
@@ -65,11 +69,15 @@
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
-                    <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">-->{{
-                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    2 <!---- 10/05-->
-                    <!--</a>-->
+                    <ng-template [ngIf]="class2Open" [ngIfElse]="class2Closed">
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{
+                            'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                            2
+                            </a>
+                    </ng-template>
+                    <ng-template #class2Closed>
+                        {{'PYTHONCOURSES.CLASSES.TITLE' | translate }} 2
+                    </ng-template>
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE2' | translate }}</mat-card-subtitle> -->
             </mat-card-header>
@@ -83,11 +91,15 @@
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
-                    <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">-->{{
-                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    3 <!--- 17/05-->
-                    <!--</a>-->
+                    <ng-template [ngIf]="class3Open" [ngIfElse]="class3Closed">
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{
+                            'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                            3
+                            </a>
+                    </ng-template>
+                    <ng-template #class3Closed>
+                        {{'PYTHONCOURSES.CLASSES.TITLE' | translate }} 3
+                    </ng-template>
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE3' | translate }}</mat-card-subtitle> -->
             </mat-card-header>
@@ -161,8 +173,7 @@
     </div>
 
     <!-- Sponsors Actuales -->
-    <!--
-  <div class="bottomLine mt-4">
+  <!-- <div class="bottomLine mt-4">
     <div class="row">
       <h1 class="section-title">Sponsors</h1>
 
@@ -197,9 +208,7 @@
 
 
     </div>
-  </div>
-    -->
-
+  </div> -->
     <app-footer></app-footer>
 
 </body>
