fix python course's links

--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -48,7 +48,7 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <ng-template [ngIf]="class1Open" [ngIfElse]="class1Closed">
-                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb">{{
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Introductorio_Clases/Clase_1_Introducción_a_la_Programación_con_Python.ipynb">{{
                         'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                         1
                         </a>
@@ -81,7 +81,7 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <ng-template [ngIf]="class2Open" [ngIfElse]="class2Closed">
-                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Introductorio_Clases/Clase_2_Introducción_a_la_Programación_con_Python.ipynb">{{
                             'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                             2
                             </a>
@@ -114,7 +114,7 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <ng-template [ngIf]="class3Open" [ngIfElse]="class3Closed">
-                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{
+                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Introductorio_Clases/Clase_3_Introducción_a_la_Programación_con_Python.ipynb">{{
                             'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                             3
                             </a>
