--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -1,191 +1,194 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 
 html {
-    /*min-height: 200%;*/
-    background-size: cover;
+  /*min-height: 200%;*/
+  background-size: cover;
 }
 
 body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  padding: 10%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
-.not-available-background-color{
-    background-color: lightgrey;
+.not-available-background-color {
+  background-color: lightgrey;
 }
 
 #icons {
-    text-align: center;
-    color: whitesmoke;
+  text-align: center;
+  color: whitesmoke;
 }
 
 .icon {
-    color: whitesmoke;
+  color: whitesmoke;
 }
 
 #iconscontainer {
-    width: 20%;
-    padding-top: 3vmin;
-    margin-left: auto;
-    margin-right: auto;
+  width: 20%;
+  padding-top: 3vmin;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-p{
-    color: rgb(0, 0, 0);
-    margin-top: 3vmin;
-    margin-bottom: 3vmin;
-    background: rgba(245, 245, 245, 0.2);
-    padding: 3vmin;
-    border-radius: 5vmin;
-    text-align: justify;
+.text-section {
+  color: rgb(0, 0, 0);
+  margin-top: 3vmin;
+  margin-bottom: 3vmin;
+  background: rgba(245, 245, 245, 0.2);
+  padding: 3vmin;
+  border-radius: 5vmin;
+  text-align: justify;
 }
 
 h1 {
-    color: rgb(0, 0, 0);
-    font-size: 5vmin;
-    font-weight: lighter;
+  color: rgb(0, 0, 0);
+  font-size: 5vmin;
+  font-weight: lighter;
 }
 
 .col-sm {
-    margin-top: 1vmin;
-    margin-bottom: 1vmin;
-    text-align: center;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
+  text-align: center;
 }
 
 .example-card {
-    margin-bottom: 15px;
-  }
+  margin-bottom: 15px;
+}
 
-
-  .example-header-image {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png');
-    background-size: cover;
-  }
-
+.example-header-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png");
+  background-size: cover;
+}
 
 .topbottomLine {
-    padding-top: 2vmin;
-    padding-bottom: 2vmin;
-    border-top: whitesmoke 2px solid;
-    border-bottom: whitesmoke 2px solid;
-    vertical-align: middle;
-    align-content: center;
+  padding-top: 2vmin;
+  padding-bottom: 2vmin;
+  border-top: whitesmoke 2px solid;
+  border-bottom: whitesmoke 2px solid;
+  vertical-align: middle;
+  align-content: center;
 }
-
 
 @media (max-width: 700px) {
-    .topbottomLine {
-        padding-top: 30%;
-    }
-
+  .topbottomLine {
+    padding-top: 30%;
+  }
 }
 
-
 .transparentButton {
-    padding: 2vmin;
-    border: solid 2px whitesmoke;
-    border-radius: 5vmin;
-    color: whitesmoke;
-    background-color: transparent;
-    transition: all .5s ease;
+  padding: 2vmin;
+  border: solid 2px whitesmoke;
+  border-radius: 5vmin;
+  color: whitesmoke;
+  background-color: transparent;
+  transition: all 0.5s ease;
 }
 
 .transparentButton:hover {
-    background-color: whitesmoke;
-    color: black;
+  background-color: whitesmoke;
+  color: black;
 }
 
-#homeText { display: inline; }
+#homeText {
+  display: inline;
+}
 
 #titleBar h1 {
-    color: rgb(0, 0, 0);
-    vertical-align: middle;
-    margin-left: auto;
-    padding-left: 1vmin;
-    text-align: right;
+  color: rgb(0, 0, 0);
+  vertical-align: middle;
+  margin-left: auto;
+  padding-left: 1vmin;
+  text-align: right;
 }
 
 #titleBar {
-    padding-left: 1vmin;
-    padding-right: 2vmin;
-    display: flex;
-    flex-direction: row;
+  padding-left: 1vmin;
+  padding-right: 2vmin;
+  display: flex;
+  flex-direction: row;
 }
 
 .halfRight {
-    padding: 1vmin;
-    margin: 1vmin;
-    float: right;
-    width: 45%;
+  padding: 1vmin;
+  margin: 1vmin;
+  float: right;
+  width: 45%;
 }
 
 .halfLeft {
-    padding: 1vmin;
-    margin: 1vmin;
-    float: left;
-    width: 45%;
+  padding: 1vmin;
+  margin: 1vmin;
+  float: left;
+  width: 45%;
 }
 
 .marginTop {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 mdb-card {
-    border-radius: 5vmin;
-    margin-top: 1vmin;
-    margin-bottom: 1vmin;
+  border-radius: 5vmin;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
 }
 
-h2{
-    font-size: 3vmin;
-    margin-left: 20px;
-    text-align: left;
-    color: black;
+h2 {
+  font-size: 3vmin;
+  margin-left: 20px;
+  text-align: left;
+  color: black;
 }
 
 #anotate {
-    margin-top: 4vmin;
-    border-radius: 5vmin;
-    align-content: center;
-    border: solid whitesmoke 2px;
+  margin-top: 4vmin;
+  border-radius: 5vmin;
+  align-content: center;
+  border: solid whitesmoke 2px;
 }
 
 #anotateButton {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-bottom: 2vmin;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 2vmin;
 }
 
 footer {
-    position: relative;
-    bottom: 10%;
-    align-content: center;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
-    background-size: cover;
-    max-width: 100%;
+  position: relative;
+  bottom: 10%;
+  align-content: center;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  background: rgb(10, 27, 103);
+  background: linear-gradient(
+      75deg,
+      rgba(10, 27, 103, 1) 0%,
+      rgba(92, 37, 186, 1) 50%,
+      rgba(59, 173, 217, 1) 100%
+    )
+    no-repeat center center fixed;
+  background-size: cover;
+  max-width: 100%;
 }
 
-h3{
-    margin-left: 20px;
-    color: black;
+h3 {
+  margin-left: 20px;
+  color: black;
 }
 
 .col-sm {
-    text-align: center;
-    padding-top: auto;
-    vertical-align: middle;
+  text-align: center;
+  padding-top: auto;
+  vertical-align: middle;
 }
 
 img {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* Flex */
@@ -197,118 +200,120 @@ img {
 }
 */
 @media (max-width: 600px) {
-    #homeText { display: none; }
-    #homebutton { height: 10vmin; }
-    .halfLeft {
-        display: inline-block;
-        width: 100% !important;
-        margin-left: auto;
-    }
-    .halfRight {
-        display: inline-block;
-        width: 100% !important;
-        margin-left: auto;
-    }
-    #anotate {
-        width: 100%;
-    }
-    html {
-        min-height:350%;
-    }
-
+  #homeText {
+    display: none;
+  }
+  #homebutton {
+    height: 10vmin;
+  }
+  .halfLeft {
+    display: inline-block;
+    width: 100% !important;
+    margin-left: auto;
+  }
+  .halfRight {
+    display: inline-block;
+    width: 100% !important;
+    margin-left: auto;
+  }
+  #anotate {
+    width: 100%;
+  }
+  html {
+    min-height: 350%;
+  }
 }
-
 
 .goback-button {
-    font-size: calc(0.5vw + 0.5rem);
-    font-weight: 600;
-    margin-top: 0.25rem;
-    padding:  0.7rem 1rem 0.7rem 1rem;
-    border: solid rgb(23, 46, 148);
-    color: rgb(23, 46, 148) !important;
-    border-radius: 5px;
-    background-color: inherit;
-    border-width: 3px;
-    transition: all 175ms ease-in-out;
+  font-size: calc(0.5vw + 0.5rem);
+  font-weight: 600;
+  margin-top: 0.25rem;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+  border: solid rgb(23, 46, 148);
+  color: rgb(23, 46, 148) !important;
+  border-radius: 5px;
+  background-color: inherit;
+  border-width: 3px;
+  transition: all 175ms ease-in-out;
 }
 .goback-button:hover {
-    box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
-    color: white !important;
-    background-color: #0d47a1;
-    border-color: white;
+  box-shadow: 0 0 0px 3px rgba(0, 0, 0, 0.2);
+  color: white !important;
+  background-color: #0d47a1;
+  border-color: white;
 }
 
-.goback-button >.button-text {
-    color: rgb(23, 46, 148) !important;
+.goback-button > .button-text {
+  color: rgb(23, 46, 148) !important;
 }
-.goback-button:hover > .button-text{
-    color: white !important;
+.goback-button:hover > .button-text {
+  color: white !important;
 }
 
-.course-title {
-    font-size: calc(1.5vw + 1rem);
-    font-weight: 400;
-    color: #0d47a1;
-    letter-spacing: 1px;
+.title {
+  font-size: calc(1.5vw + 1rem);
+  font-weight: 400;
+  color: #0d47a1;
+  letter-spacing: 1px;
 }
-.course-subtitle {
-    font-size: calc(0.7vw + 0.7rem);
-    color: rgba(13, 71, 161, 0.8);
-    font-weight: 600;
-    margin-top: 0.5rem;
+.subtitle {
+  font-size: calc(0.7vw + 0.7rem);
+  color: rgba(13, 71, 161, 0.8);
+  font-weight: 600;
+  margin-top: 0.5rem;
 }
 
 .no-shadow {
-    box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .faq-section {
-    margin-top: 3rem;
-    margin-bottom: 4rem;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
 }
 
 .faq-accordion {
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 .faq-panel {
-    height:max-content;
+  height: max-content;
 }
 .faq-question {
-    font-size: 1rem; 
+  font-size: 1rem;
 }
 .faq-answer {
-    font-size: larger;
+  font-size: larger;
 }
 
 /** tomado de team component css */
 
 ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
-    color:rgb(23, 46, 148);
-    background-color: transparent;
+  color: rgb(23, 46, 148);
+  background-color: transparent;
 }
 
 ::ng-deep .mat-ink-bar {
-    background-color: var(--primary-color,whitesmoke) !important;
+  background-color: var(--primary-color, whitesmoke) !important;
 }
 
 ::ng-deep .mat-expansion-indicator::after {
-    color:rgb(23, 46, 148);
+  color: rgb(23, 46, 148);
 }
 
 mat-panel-description {
-    text-align: right;
+  text-align: right;
 }
 
 mat-expansion-panel {
-    background-color: transparent;
-    margin-top: 1.5vmin;
+  background-color: transparent;
+  margin-top: 1.5vmin;
 }
 
 mat-expansion-panel-header {
-    border: rgb(23, 46, 148) 1px solid;
-    border-radius: 5vmin;
+  border: rgb(23, 46, 148) 1px solid;
+  border-radius: 5vmin;
 }
 
 mat-panel-title {
-    color:rgb(23, 46, 148);
+  color: rgb(23, 46, 148);
 }
