--- a/src/app/modules/events/pages/events/events.component.css
+++ b/src/app/modules/events/pages/events/events.component.css
@@ -1,175 +1,208 @@
 body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-	padding-top: 160px;
+  padding: 10%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  padding-top: 160px;
 }
 
 .topbottomLine {
-    border-top:#0d47a1 2px solid;
-    border-bottom: #0d47a1 2px solid;
-    vertical-align: middle;
-    align-content: center;
+  border-top: #0d47a1 2px solid;
+  border-bottom: #0d47a1 2px solid;
+  vertical-align: middle;
+  align-content: center;
 }
 
-.flexImage{
-	display: flex;
-	/* centrado horizontal */
-	justify-content: center;
-	/* centrado vertical */
-	align-items: center;
+.flexImage {
+  display: flex;
+  /* centrado horizontal */
+  justify-content: center;
+  /* centrado vertical */
+  align-items: center;
 }
 
-.IEEEEventsImage{
-	width: 20%;
-	max-width: 72px;
-	min-width: 36px;
+.IEEEEventsImage {
+  width: 20%;
+  max-width: 72px;
+  min-width: 36px;
 }
 
-.flexText{
-	display: flex;
-	/* centrado horizontal */
-	justify-content: center;
-	/* centrado vertical */
-	align-items: center;
+.flexText {
+  display: flex;
+  /* centrado horizontal */
+  justify-content: center;
+  /* centrado vertical */
+  align-items: center;
 }
-
 
 .page-title {
-    color: #0d47a1;
-    font-size: 2.5em
+  color: #0d47a1;
+  font-size: 2.5em;
 }
-.image-size{
-   max-width: 100%;
-   max-height: 20em;
+.image-size {
+  max-width: 100%;
+  max-height: 20em;
 }
 
 .row-eq-height {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display:         flex;
-  }
-
-  .card-group-row{
-    display:flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
-.card-group-col{
-    flex: 1;
 
-    padding: 1em;
-    /*border:solid;*/
+.card-group-row {
+  display: flex;
+}
+.card-group-col {
+  flex: 1;
+
+  padding: 1em;
+  /*border:solid;*/
 }
 @media screen and (max-width: 700px) {
-    .card-group-row{
-        display: inline-block;
-    }
-    .card-group-col {
-        width: 90%;
-        margin-bottom: 25px;
-    }
+  .card-group-row {
+    display: inline-block;
+  }
+  .card-group-col {
+    width: 90%;
+    margin-bottom: 25px;
+  }
 }
 .event-card {
-    margin: auto;
-    height: 100%;
+  margin: auto;
+  height: 100%;
 }
 
 .event-card-img {
-    width: 100%;
-    object-fit: cover;
-    height: 16em;
-    object-position: center center;
+  width: 100%;
+  object-fit: cover;
+  height: 16em;
+  object-position: center center;
 }
 
 .event-card:hover .event-card-img {
-    animation: event-move 40s infinite;
+  animation: event-move 40s infinite;
 }
 
 @keyframes event-move {
-    from {object-position: top left;}
-    50% {object-position: bottom right;}
-    to {object-position: top left;}
+  from {
+    object-position: top left;
+  }
+  50% {
+    object-position: bottom right;
+  }
+  to {
+    object-position: top left;
+  }
 }
 
 .ieeextreme-filter {
-    filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
-    transition: all ease-in 125ms;
+  filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
+  transition: all ease-in 125ms;
 }
 
 .ieeextreme-text {
-    top: 30%;
+  top: 30%;
 }
 
 .cursopython-filter {
-    filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(60%);
-    transition: all ease-in 125ms;
+  filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(60%);
+  transition: all ease-in 125ms;
 }
 
-.cursopython-text{
-    top: 20%;
+.cursopython-text {
+  top: 20%;
 }
 
 .cursoanalisis-filter {
-    filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
-    transition: all ease-in 125ms;
+  filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
+  transition: all ease-in 125ms;
 }
 
-
-.cursoanalisis-text{
-    top: 5%;
+.cursoanalisis-text {
+  top: 5%;
 }
 
 .bitcup-filter {
-    filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(70%);
-    transition: all ease-in 125ms;
+  filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(70%);
+  transition: all ease-in 125ms;
 }
 
-.bitcup-text{
-    top: 35%;
+.bitcup-text {
+  top: 35%;
+}
+
+.asimovcup-filter {
+  filter: sepia(10%) hue-rotate(18deg) saturate(120%) brightness(80%);
+  transition: all ease-in 125ms;
+}
+
+.asimovcup-text {
+  top: 35%;
 }
 
 .image-with-text {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .text-on-image {
-    position:absolute;
-    text-align: center;
-    /*top: 50%;*/
-    width: 100%;
-    /*font-size: min(4rem, 5vw);*/
-    font-size: calc(4vw);
-    font-weight: 900;
-    color: rgba(255, 255, 255, 1);
-    letter-spacing: 1px;
-    text-shadow: -1px 1px 0 #000,
-                  1px 1px 0 #000,
-                  1px -1px 0 #000,
-                  -1px -1px 0 #000;
+  position: absolute;
+  text-align: center;
+  /*top: 50%;*/
+  width: 100%;
+  /*font-size: min(4rem, 5vw);*/
+  font-size: 2rem;
+  font-weight: 900;
+  color: rgba(255, 255, 255, 1);
+  letter-spacing: 1px;
+  text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
+    -1px -1px 0 #000;
+}
+
+.card-listing {
+  list-style: none;
+  margin: 0 0 1em 0;
+  padding: 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  /*grid-template-columns: repeat(2, 400px);*/
+  grid-gap: 2rem;
 }
 
 @media (min-width: 768px) {
-
-	.flexText{
-		display: flex;
-		/* centrado horizontal */
-		justify-content: left;
-		/* centrado vertical */
-		align-items: center;
-	}
+  .flexText {
+    display: flex;
+    /* centrado horizontal */
+    justify-content: left;
+    /* centrado vertical */
+    align-items: center;
+  }
 }
 
 @media (min-width: 1000px) {
-    .text-on-image {
-        font-size: calc(3vw);
-    }
-    .ieeextreme-text {
-        top: 10%;
-    }
-    .cursoanalisis-text{
-        top: 5%;
-    }
+  .text-on-image {
+    font-size: 2rem;
+  }
+  .ieeextreme-text {
+    top: 10%;
+  }
+  .cursoanalisis-text {
+    top: 5%;
+  }
+}
+
+@media (min-width: 1500px) {
+  .text-on-image {
+    font-size: 2rem;
+  }
+  .ieeextreme-text {
+    top: 10%;
+  }
+  .cursoanalisis-text {
+    top: 5%;
+  }
 }
