--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -10,28 +10,23 @@
   </header>
 
   <body>
-    <div class="topbottomLine" id="home" style="margin-bottom: 2%">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <h1 id="logotext" class="title">
-              {{ "ASIMOVCUP.TITLE" | translate }}
-            </h1>
-          </div>
-        </div>
+    <!-- BANNER -->
+    <div class="banner">
+      <img
+        src="../../../../../assets/image/courses/asimov-cup-banner.png"
+        class="max-width"
+        alt="Asimov Cup - Competencia de Robótica"
+      />
+    </div>
+    <div>
+      <div class="d-flex flex-row-reverse">
+        <button class="enroll-button">
+          <a href="https://forms.gle/QNv8ukJC59VHEiPEA" class="button-text">
+            {{ "ASIMOVCUP.ENROLLBUTTON" | translate }}
+          </a>
+        </button>
       </div>
     </div>
-
-    <!-- ENROLL BUTTON PLACEHOLDER
-    <div>
-        <div class="d-flex flex-row-reverse">
-            <button class="goback-button">
-        <a href="https://bit.ly/Python1C2022" class="button-text">
-          {{ 'ASIMOVCUP.ENROLLBUTTON' | translate }} </a>
-      </button>
-        </div>
-    </div>
-    -->
     <!-- DESCRIPTION section -->
     <div>
       <h2 class="subtitle">{{ "ASIMOVCUP.DESC.TITLE" | translate }}</h2>
